--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="refresh_summary">Set the maximum refresh rate for a specific application</string>
     <string name="refresh_default">Default</string>
     <string name="refresh_standard">60Hz</string>    
-    <string name="refresh_extreme">120Hz</string>
+    <string name="refresh_extreme">120Hz</string>  
+    <string name="refresh_land">60Hz on Landscape</string>    
 
 </resources>
